--- a/DO316/service.html
+++ b/DO316/service.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Image Example</title>
+    <meta charset="UTF-8">
+    <title>Simple HTML Page</title>
 </head>
 <body>
-
-  <img src= "C:\Users\qbch7471\Downloads\anish-BG_remove.png" alt="Anish Rana">
-
+    <h1>Welcome to My Web Page</h1>
+    <p>This is a simple HTML file with an image.</p>
+    <img src=""C:\Users\qbch7471\Downloads\anish-BG_remove.png"" alt="Sample Image">
 </body>
 </html>
