--- a/DO316/service.html
+++ b/DO316/service.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Welcome to My Web Page</h1>
     <p>This is a simple HTML file with an image.</p>
-    <img src=""C:\Users\qbch7471\Downloads\anish-BG_remove.png"" alt="Sample Image">
+    <img src="https://avatars.githubusercontent.com/u/93471182?s=96&v=4" alt="Sample Image">
 </body>
 </html>
