--- a/DO316/service.html
+++ b/DO316/service.html
@@ -5,8 +5,7 @@
     <title>Simple HTML Page</title>
 </head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a simple HTML file with an image.</p>
-    <img src="https://avatars.githubusercontent.com/u/93471182?s=96&v=4" alt="Sample Image">
+    <h1>Welcome to "anishrana2001"</h1>
+    <p>Want to Learn Redhat Openshift , Kubernetes, Docker and many more, then switch to my Youtube Channel "anishrana2001" </p>
 </body>
 </html>
